# ArcX

./: ARC Portal.docx  db.sqlite3  manage.py  pyproject.toml  requirements.txt  schema.sql
ArcX/: asgi.py  settings.py  urls.py  wsgi.py
admin_app/: forms.py  models.py  urls.py  views.py
admin_app/migrations/: 0001_initial.py  0002_alter_equipmenttest_table.py  0002_delete_adminuserpdf.py  0002_userprofile.py
admin_app/static/admin_app/css/: admin_styles.css
admin_app/static/css/: login.css  styles.css
admin_app/templates/admin_app/: aa_dashboard.html  aa_login.html  admin_add_equipment.html  admin_delete_equipment.html  base.html  client_competency.html  client_competency_staff_add_edit.html  client_docs.html  client_edit.html  client_equipment.html  clients.html  dashboard.html  documents.html  login.html
admin_app/templates/admin_app/clients/: aa_client_create.html  aa_client_delete.html  aa_client_new.html  aa_client_pw_edit.html  aa_client_read.html  aa_client_update.html  (+2 more)
admin_app/templatetags/: custom_filters.py
arcx/: asgi.py  settings.py  urls.py  wsgi.py
client_app/: forms.py  models.py  urls.py  views.py
client_app/migrations/: 0001_initial.py  0002_rename_userpdf_clientuserpdf.py  0003_alter_clientuserpdf_user.py
client_app/templates/client_app/: base.html  client_equipment.html  client_staff.html  dashboard.html  documents.html  login.html  password_change.html  password_change_done.html  upload_document.html  upload_pdf.html
data/: datadevelop.sql  new_datadevelop.sql
data/archive/: 1datadevelop.sql
media/: 12795.avif
(+12 files in other folders)
