[tool.poetry]
name = "arcx"
version = "0.1.0"
description = ""
authors = ["Matt Clifford <matthew.clifford@hfx.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
